Fixed white space on the right

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+html, body{
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
 .night {
   --background: #1c1e21;
   --sectionbackground: #000000;
